--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,223 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+body{
+    overflow-y: hidden;
+    font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper{
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+
+}
+.addQueue{
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.search-input{
+    padding: 10px;
+    font-size: 22px;
+    outline: none;
+    border:1px solid black;
+    border-radius: 10px;
+    height: 50px;
+    margin-top:10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.search-input:hover{
+    border: 2px solid green;
+}
+
+.header{
+    height: 100px;
+    width: 95vw;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: lightgreen;
+}
+.header-container{
+    justify-content: center;
+    display: flex;
+    width: 100vw;
+}
+.results-ui{
+    overflow-y:scroll;
+}
+
+.result-li{
+    font-family: sans-serif;
+    height: 60px;
+    width:90vw;
+    padding: 7px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    text-align: center;
+}
+.result-li:hover{
+    border: 2px solid green;
+
+
+}
+
+.binder_input_results{
+    width: 100vw;
+    overflow-y: scroll;
+}
+
+.input_div{
+    justify-content: center;
+    display: flex;
+}
+
+.slidecontainer{
+    justify-content: center;
+    display: flex;
+}
+
+
+
+.slider {
+    -webkit-appearance: none;
+    width: 90%;
+    height: 8px;
+    border-radius: 5px;  
+    background: #ffffff;
+    outline: none;
+    opacity: 0.8;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    position: absolute;
+    top: 80px;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; 
+    background: #04AA6D;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer;
+  }
+
+  .img_player{
+    margin-top: 5px;
+    left: 30px;
+    position: absolute;
+  }
+
+  .track_info{
+    position: absolute;
+    left: 120px;
+    top: 10px;
+    font-family: sans-serif;
+  }
+
+  .my_queue{
+    margin-top: 5px;
+    margin-bottom: 20px;
+    width: 100vw;
+    padding: 10px;
+    text-align: right;
+  }
+
+  
+  .addToQueue_drawer{
+      height: calc(100vh - 110px);
+      width: calc(100vw - 20px);
+      margin:10px;
+      background-color: white;
+      position: absolute;
+      transition: 300ms ease ;
+      transform: scale(0);
+      -webkit-transition: 300ms ease ;
+      -moz-transition: 300ms ease ;
+      -ms-transition: 300ms ease ;
+      -o-transition: 300ms ease ;
+      -webkit-transform: scale(0);
+      -moz-transform: scale(0);
+      -ms-transform: scale(0);
+      -o-transform: scale(0);
+      box-shadow: -1px -1px 9px 0px rgba(0,0,0,0.75);
+      -webkit-box-shadow: -1px -1px 9px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: -1px -1px 9px 0px rgba(0,0,0,0.75);
+      justify-content: center;
+      display: flex;
+}
+
+.drawer_open{
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+ }
+
+ .close_queue_drawer{
+    justify-content: center;
+    display: flex;
+    text-align: center;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    border-radius: 50%;
+    right: 0;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.add_To_Queue{
+    width: 90%;
+    height: 50px;
+    background-color: rgb(118, 207, 118);
+    position: absolute;
+    bottom: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    text-align: center;
+}
+.textADD{
+    margin-top: 10px;
+    color: white;
+}
+.image_add_queue{
+    margin-top: calc((100vh - 110px) / 3.2)
+}
+.center{
+    text-align: center;
+}
+
+.margin-top{
+    margin-top: 15px;
 }
