--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,7 @@ body {
   -moz-box-shadow: -1px -1px 9px 0px rgba(0, 0, 0, 0.75);
   justify-content: center;
   display: flex;
+  z-index: 1000;
 }
 
 .drawer_open {
@@ -206,6 +207,7 @@ body {
   -moz-transform: scale(1);
   -ms-transform: scale(1);
   -o-transform: scale(1);
+  background-color: white;
 }
 
 .close_queue_drawer {
@@ -334,11 +336,11 @@ html {
 }
 
 .queuePage {
-  top: 100px;
+  top: 110px;
   width: 100vw;
   position: absolute;
   overflow-y: scroll;
-  height: calc(100vh - 150px);
+  height: calc(100vh - 200px);
   --scrollbar-width: 8px;
 
   --mask-height: 32px;
